Fix header nav links

--- a/pages/services.html
+++ b/pages/services.html
@@ -53,11 +53,11 @@ permalink: /services/
   </div>
 
   <section class="page-block separated">
-    <div class="page-block-header-2">
+    <div class="page-block-header-2 text-center">
       <h2>Key capabilities</h2>
 
       <div class="row">
-        <div class="page-header-content-3">
+        <div class="page-header-content-3 text-center">
           <p>
             Your digital challenges are neither siloed nor static. Our teams are smartly
             tailored to meet your holistic and dynamic needs, and to impart you with
