--- a/pages/about.html
+++ b/pages/about.html
@@ -18,153 +18,152 @@ permalink: /about/
     class="about-skylight-img">
 
   <section class="page-block">
-    <div class="row">
-      <div class="page-block-header-2">
-        <h2>Our story</h2>
-      </div>
+    <div class="page-block-header-2">
+      <h2>Our story</h2>
     </div>
-    <div class="row">
-      <div class="about-info">
-        <p>
-          Skylight was launched in June of 2017. We're currently made up of 16 people and one ferret.
-          A lot of us originally worked for civic-oriented groups such as 18F,
-          the U.S. Digital Service, and the Presidential Innovation Fellows.
-          Now, as part of Skylight, we're working hard to cultivate an incredible
-          team and culture.
-        </p>
 
-        <p>
-          What brings us together is a passion for creating better outcomes for
-          the public through great government digital services. We're basically impact junkies.
-          But we're also engineers, developers, designers, product managers, consultants,
-          writers, speakers, inventors, roboticists, gamers, authors, veterans,
-          entrepreneurs, parents, and more. Such a diverse team always gives us a
-          unique perspective on things.
-        </p>
+    <div class="about-info">
+      <div class="about-info-row">
+        <div class="about-info-col">
+          <p>
+            Skylight was launched in June of 2017. We're currently made up of 16 people and one ferret.
+            A lot of us originally worked for civic-oriented groups such as 18F,
+            the U.S. Digital Service, and the Presidential Innovation Fellows.
+            Now, as part of Skylight, we're working hard to cultivate an incredible
+            team and culture.
+          </p>
 
-        <p>
-          Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445">Chapel Hill, North Carolina</a>,
-          but we're a distributed and remote-friendly team. A lot of our client work
-          originates from Washington DC.
-        </p>
+          <p>
+            What brings us together is a passion for creating better outcomes for
+            the public through great government digital services. We're basically impact junkies.
+            But we're also engineers, developers, designers, product managers, consultants,
+            writers, speakers, inventors, roboticists, gamers, authors, veterans,
+            entrepreneurs, parents, and more. Such a diverse team always gives us a
+            unique perspective on things.
+          </p>
+
+          <p>
+            Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445">Chapel Hill, North Carolina</a>,
+            but we're a distributed and remote-friendly team. A lot of our client work
+            originates from Washington DC.
+          </p>
+        </div>
       </div>
     </div>
   </section>
 
   <section id="hubzone" class="page-block">
-    <div class="row">
-      <div class="page-block-header-2">
-        <h2>Certified HUBZone</h2>
-      </div>
+    <div class="page-block-header-2">
+      <h2>Certified HUBZone</h2>
     </div>
-    <div class="row">
-      <div class="about-info">
-        <p>
-          We're certified by the Small Business Administration (SBA) as a <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program">
-          Historically Underutilized Business Zone (HUBZone)</a> company. This special SBA designation
-          means we're committed to revitalizing local communities through job creation.
-          In turn, we're granted privileged access to federal government contract opportunities,
-          including up to $4M per contract award.
-        </p>
-        <p>
-          To maintain our HUBZone status, 35% of our employees must be located in
-          <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program/hubzone-maps">
-          one of the nearly 20,000 HUBZone areas across the country</a>. Of that 35%, the greatest
-          number of people must be concentrated in our "principal office" location, which is in
-          Chapel Hill, North Carolina. The remaining percentage of people are free to live
-          in whatever HUBZone locale they prefer.
-        </p>
+
+    <div class="about-info">
+      <div class="about-info-row">
+        <div class="about-info-col">
+          <p>
+            We're certified by the Small Business Administration (SBA) as a <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program">
+            Historically Underutilized Business Zone (HUBZone)</a> company. This special SBA designation
+            means we're committed to revitalizing local communities through job creation.
+            In turn, we're granted privileged access to federal government contract opportunities,
+            including up to $4M per contract award.
+          </p>
+
+          <p>
+            To maintain our HUBZone status, 35% of our employees must be located in
+            <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program/hubzone-maps">
+            one of the nearly 20,000 HUBZone areas across the country</a>. Of that 35%, the greatest
+            number of people must be concentrated in our "principal office" location, which is in
+            Chapel Hill, North Carolina. The remaining percentage of people are free to live
+            in whatever HUBZone locale they prefer.
+          </p>
+        </div>
       </div>
     </div>
   </section>
 
   {% if site.data.team[0] %}
     <section id="meet-the-team" class="page-block">
-      <div class="row">
-        <div class="page-block-header-2">
-          <h2>Meet the team</h2>
-        </div>
+      <div class="page-block-header-2">
+        <h2>Meet the team</h2>
       </div>
 
-      <div class="row">
-        <div class="employees">
-          {% assign employees = site.data.team | where: 'active', 'true' | sort: 'order' %}
+      <div class="employees">
+        {% assign employees = site.data.team | where: 'active', 'true' | sort: 'order' %}
 
-          {% include hanging_column_size.html
-            collection_size = employees.size
-            col_size = 3
-          %}
+        {% include hanging_column_size.html
+          collection_size = employees.size
+          col_size = 3
+        %}
 
-          <div class="employees-row {{hanging_col_size_css_class}}">
-            {% for emp in employees %}
-              <div id="{{emp.name}}" class="employee-col">
-                <div class="employee-card">
-                  <div role="img" class="employee-img" style="background-image: url({{emp.image}});" title="{{emp.image_description}}"></div>
-                  <div class="employee-block">
-                    <h3 class="employee-title">{{emp.full_name}}</h3>
-                    <h4 class="employee-subtitle">{{emp.position}}</h4>
-                    <p class="employee-text">{{emp.bio}}</p>
-                  </div>
-                  <div class="employee-footer">
-                      {% for social in emp.socials %}
-                        {% if social.name == 'Blog Posts' or social.name == 'Projects' %}
-                          {% assign target = '_self' %}
-                        {% else %}
-                          {% assign target = '_blank' %}
-                        {% endif %}
-                        <a href="{{social.link}}" target={{target}} data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
-                          <i class="fa fa-{{social.fa_icon_name}}" aria-hidden="true" title="{{social.name}}"></i>
-                          <span class="sr-only">{{social.link_description}}</span>
-                        </a>
-                      {% endfor %}
-                  </div>
+        <div class="employees-row {{hanging_col_size_css_class}}">
+          {% for emp in employees %}
+            <div id="{{emp.name}}" class="employee-col">
+              <div class="employee-card">
+                <div role="img" class="employee-img" style="background-image: url({{emp.image}});" title="{{emp.image_description}}"></div>
+                <div class="employee-block">
+                  <h3 class="employee-title">{{emp.full_name}}</h3>
+                  <h4 class="employee-subtitle">{{emp.position}}</h4>
+                  <p class="employee-text">{{emp.bio}}</p>
+                </div>
+                <div class="employee-footer">
+                    {% for social in emp.socials %}
+                      {% if social.name == 'Blog Posts' or social.name == 'Projects' %}
+                        {% assign target = '_self' %}
+                      {% else %}
+                        {% assign target = '_blank' %}
+                      {% endif %}
+                      <a href="{{social.link}}" target={{target}} data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
+                        <i class="fa fa-{{social.fa_icon_name}}" aria-hidden="true" title="{{social.name}}"></i>
+                        <span class="sr-only">{{social.link_description}}</span>
+                      </a>
+                    {% endfor %}
                 </div>
               </div>
-            {% endfor %}
-          </div>
+            </div>
+          {% endfor %}
         </div>
-      </section>
+      </div>
     </section>
   {% endif %}
 
   <section class="page-block">
-    <div class="row">
-      <div class="page-block-header-2">
-        <h2>Always at your service</h2>
-      </div>
+    <div class="page-block-header-2">
+      <h2>Always at your service</h2>
     </div>
 
-    <div class="row">
-      <div class="about-info">
-        <p>
-          If you have a question for us, or would just like to get in touch, drop us a message
-          at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
-          If you'd like to inquire about hiring us for a job, <a href="/hire-us/">fill out this short form</a>.
-          If you're interested in joining our team, <a href="/join/">send us your information</a>.
-          If you'd like to explore forming a partnership to pursue government opportunities,
-          <a href="/alliances/">let's talk business</a>.
-        </p>
+    <div class="about-info">
+      <div class="about-info-row">
+        <div class="about-info-col">
+          <p>
+            If you have a question for us, or would just like to get in touch, drop us a message
+            at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
+            If you'd like to inquire about hiring us for a job, <a href="/hire-us/">fill out this short form</a>.
+            If you're interested in joining our team, <a href="/join/">send us your information</a>.
+            If you'd like to explore forming a partnership to pursue government opportunities,
+            <a href="/alliances/">let's talk business</a>.
+          </p>
 
-        <p>
-          We love to share our thoughts on technology, design, procurement, business, culture,
-          and more with the world. You can <a href="/blog/">read up on the our latest thinking at our
-          company blog</a>.
-        </p>
+          <p>
+            We love to share our thoughts on technology, design, procurement, business, culture,
+            and more with the world. You can <a href="/blog/">read up on the our latest thinking at our
+            company blog</a>.
+          </p>
 
-        <p>
-          You can also follow along on
-          <a href="{{site.twitter_url}}">Twitter @skylight_hq</a>.
-        </p>
+          <p>
+            You can also follow along on
+            <a href="{{site.twitter_url}}">Twitter @skylight_hq</a>.
+          </p>
 
-        <p>
-          Feel free to reach out directly to one of our leaders &mdash;
-          <a href="mailto:chris@skylight.digital">Chris Cairns</a>
-          or <a href="mailto:robert@skylight.digital">Robert Read</a>.
-        </p>
+          <p>
+            Feel free to reach out directly to one of our leaders &mdash;
+            <a href="mailto:chris@skylight.digital">Chris Cairns</a>
+            or <a href="mailto:robert@skylight.digital">Robert Read</a>.
+          </p>
 
-        <p>
-          Thank you for taking the time to learn more about us.
-        </p>
+          <p>
+            Thank you for taking the time to learn more about us.
+          </p>
+        </div>
       </div>
     </div>
   </section>
