Rework page spacing and page headers

--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -11,14 +11,12 @@ permalink: /hire-us/
 <div class="hire-us">
 
   <div class="hire-row">
-    <div class="text-lead-col text">
-      <p>
-        <strong>We'd love to work with you on turning your most bold idea or complex problem
-        into a public success story.</strong> Please describe what you're looking
-        to do, and we'll follow-up in one business day. If you prefer, you can email
-        us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
-      </p>
-    </div>
+    <p>
+      <strong>We'd love to work with you on turning your most bold idea or complex problem
+      into a public success story.</strong> Please describe what you're looking
+      to do, and we'll follow-up in one business day. If you prefer, you can email
+      us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
+    </p>
   </div>
 
   <div class="hire-row">
@@ -52,7 +50,7 @@ permalink: /hire-us/
         </div>
 
         <div class="form-group">
-          <button type="submit">Submit</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
     </div>
