Center button on contact page for consistency

--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -49,8 +49,8 @@ permalink: /hire-us/
           <textarea id="help-input" class="form-control" rows="3" placeholder="I need help modernizing an old system..." name="need" required></textarea>
         </div>
 
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="form-group text-center">
+          <button type="submit" class="btn btn-primary btn-lg">Submit</button>
         </div>
       </form>
     </div>
