--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -50,7 +50,7 @@ permalink: /hire-us/
         </div>
 
         <div class="form-group text-center">
-          <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+          <button class="btn btn-outline-primary btn-lg btn-width-md btn-cursor">Submit</button>
         </div>
       </form>
     </div>
