Adds a page header to join us for consistency

--- a/pages/join.html
+++ b/pages/join.html
@@ -4,6 +4,19 @@ title: Join Us
 permalink: /join/
 ---
 
+<header class="page-header-1">
+  <div class="row">
+    <div class="page-header-title-1">
+      <h1>Join Us</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="page-header-content-1">
+      <p>We're looking for great people to join us in a movement to make government work in a digital world.</p>
+    </div>
+  </div>
+</header>
+
 <div class="join-us">
 
   <div class="row">
