Update policies, alliances, 404, and add bold to buttons

--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -6,23 +6,21 @@ permalink: /alliances/
 
 {% include page_header.html
   header_title = 'Let&apos;s partner!'
-  header_class = 'page-header-2'
+  header_class = 'page-header-1'
 %}
 
-<div class="alliances">
+<div class="hire-us">
 
-  <div class="alliances-row">
-    <div class="text-lead-col">
-      <p>
-        We're embarking on a mission to create a world-class ecosystem of alliances &mdash;
-        from large companies to independent freelancers &mdash; who are passionate about making
-        government work in a digital world.
-      </p>
-    </div>
+  <div class="hire-row">
+    <p>
+      We're embarking on a mission to create a world-class ecosystem of alliances &mdash;
+      from large companies to independent freelancers &mdash; who are passionate about making
+      government work in a digital world.
+    </p>
   </div>
 
-  <div class="alliances-row">
-    <div class="alliances-contact-col">
+  <div class="hire-row">
+    <div class="hire-contact-col">
       <form accept-charset="UTF-8" action="https://formkeep.com/f/617ceafab713" method="POST">
         <input type="hidden" name="utf8" value="✓">
 
@@ -51,8 +49,8 @@ permalink: /alliances/
           <textarea id="help-input" class="form-control" rows="3" placeholder="Let's team on an exciting project opportunity..." name="oppty" required></textarea>
         </div>
 
-        <div class="form-group">
-          <button type="submit">Submit</button>
+        <div class="form-group text-center">
+          <button class="btn btn-outline-primary btn-lg btn-width-md btn-cursor">Submit</button>
         </div>
       </form>
     </div>
