--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -5,7 +5,7 @@ permalink: /alliances/
 ---
 
 {% include page_header.html
-  header_title = 'Let&apos;s partner!'
+  header_title = 'Let&apos;s Partner'
   header_class = 'page-header-2'
 %}
 
