--- a/pages/culture.html
+++ b/pages/culture.html
@@ -5,8 +5,7 @@ permalink: /culture/
 ---
 
 {% capture header_content %}
-  Our values are the core of our culture, offering a set of guidelines on the
-  behaviors and mindsets needed to achieve our mission.
+  Our values are the core of our culture, informing our thoughts, words, and actions.
 {% endcapture %}
 
 {% include page_header.html
