--- a/pages/join.html
+++ b/pages/join.html
@@ -12,7 +12,7 @@ permalink: /join/
   </div>
   <div class="row">
     <div class="page-header-content-1">
-      <p>We're looking for great people to join us in a movement to make government work in a digital world.</p>
+      <p>Together, we can make government work in a digital world.</p>
     </div>
   </div>
 </header>
@@ -26,10 +26,11 @@ permalink: /join/
         <h2>Join the team</h2>
 
         <p>
-          We're looking for great people in the fields of engineering, data science,
-          design, product management, and more to join us in a movement to make government
-          work in a digital world. You'll work alongside a <a href="/about/#meet-the-team">team of
-          talented technologists</a> who embody <a href="/culture/">our culture</a> and strive
+          We're looking for great people in the fields of design, engineering, data science,
+          product management, and more to join us in a movement to change the way
+          government delivers public services. You'll work alongside
+          a <a href="/about/#meet-the-team">team of talented technologists</a>
+          who embody <a href="/culture/">our culture</a> and strive
           to bring out the best in each other.
         </p>
 
