--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -5,7 +5,7 @@ permalink: /hire-us/
 ---
 
 {% include page_header.html
-  header_title = 'Let&apos;s deliver something great together.'
+  header_title = 'Let&apos;s Deliver Something Great'
 %}
 
 <div class="hire-us">
