copy change to join us page

--- a/pages/join.html
+++ b/pages/join.html
@@ -12,7 +12,7 @@ permalink: /join/
   </div>
   <div class="row">
     <div class="page-header-content-1">
-      <p>Together, we can make government work in a digital world.</p>
+      <p>Let's change the way government serves the public.</p>
     </div>
   </div>
 </header>
@@ -27,8 +27,8 @@ permalink: /join/
 
         <p>
           We're looking for great people in the fields of design, engineering, data science,
-          product management, and more to join us in a movement to change the way
-          government delivers public services. You'll work alongside
+          product management, and more to join us in a movement to make government
+          work in a digital world. You'll work alongside
           a <a href="/about/#meet-the-team">team of talented technologists</a>
           who embody <a href="/culture/">our culture</a> and strive
           to bring out the best in each other.
