--- a/pages/join.html
+++ b/pages/join.html
@@ -41,7 +41,7 @@ permalink: /join/
         <h2>Who we're hiring</h2>
 
         <p>
-          Skylight is seeking engineers, designers, product managers, procurement experts,
+          Skylight is seeking designers, engineers, product managers, procurement experts,
           and more who are committed to making government work in a digital world.
           <a href="/about/#meet-the-team">Our staff</a> comes from a diversity of backgrounds,
           including startups, high-tech companies, government agencies, higher-education institutions,
@@ -162,7 +162,7 @@ permalink: /join/
         <h2>Interview process</h2>
 
         <p>
-          The entire interview process usually takes 1-2 weeks, followed by 1-2 weeks for onboarding.
+          The entire interview process usually takes 1&ndash;2 weeks, followed by 1&ndash;2 weeks for onboarding.
         </p>
 
         <h2>Application review</h2>
@@ -279,7 +279,7 @@ permalink: /join/
           </li>
 
           <li>
-            Bonus opportunities
+            Profit-sharing and/or bonus opportunities
           </li>
 
           <li>
