--- a/pages/join.html
+++ b/pages/join.html
@@ -12,7 +12,7 @@ permalink: /join/
   </div>
   <div class="row">
     <div class="page-header-content-1">
-      <p>Let's change the way government serves the public.</p>
+      <p>Help change the way government serves the public.</p>
     </div>
   </div>
 </header>
