change copy on work page

--- a/pages/work.html
+++ b/pages/work.html
@@ -11,7 +11,7 @@ redirect_from:
 
 {% capture header_content %}
   Explore a sampling of the types of experience that we can
-  bring to your biggest digital challenges and opportunities.
+  bring to your biggest digital challenges.
 {% endcapture %}
 
 {% include page_header.html
