Make buttons consistent

--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -50,7 +50,7 @@ permalink: /alliances/
         </div>
 
         <div class="form-group text-center">
-          <button class="btn btn-outline-primary btn-lg btn-width-md btn-cursor">Submit</button>
+          <button class="btn-submit-outline">Submit</button>
         </div>
       </form>
     </div>
