Update copy to prevent widows

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@ permalink: /about/
   header_title = 'We&apos;re Skylight!'
   header_class = 'page-header-3'
   header_content_class = 'page-header-content-1'
-  header_content = 'Our mission is to make government work in a digital world.'
+  header_content = 'Our mission is to make government work&nbsp;in&nbsp;a&nbsp;digital&nbsp;world.'
 %}
 
 <div class="about-us">
