Prevent widows on this

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ title: Home
 
     <section class="landing-content-row">
       <div class="landing-content-primary-col">
-        <h2>Let's deliver something great</h2>
+        <h2>Let's deliver something&nbsp;great</h2>
       </div>
 
       <div class="landing-content-secondary-col">
