--- a/_projects/everify_modernization.html
+++ b/_projects/everify_modernization.html
@@ -8,7 +8,7 @@ image_description: Illustration of an abstract checkmark, signifying verificatio
 feature_image:
 feature_image_description:
 order: 7
-display: false
+display: true
 tags: [digital services delivery, josh dorothy, nick bristow, jay danielian]
 excerpt: A modernized digital service for employers to confirm the eligibility of their employees to work in the U.S.
 project_members:
