update about page

--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -9,11 +9,13 @@ feature_image:
 feature_image_description:
 order: 5
 display: true
-tags: [digital services delivery, aera hoffman, tom black, josh dorothy]
+tags: [digital services delivery, becca bartola, tom black, lesley evans, aera hoffman]
 excerpt: A knowledge management platform for improving how the Veterans Affairs delivers healthcare to Veterans through the dissemination of promising clinical and administrative practices.
 project_members:
-  - aera-hoffman
+  - becca-bartola
   - tom-black
+  - lesley-evans
+  - aera-hoffman
 technologies:
   - Ruby / Rails
   - U.S. Web Design Standards
