--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -14,7 +14,7 @@ permalink: /hire-us/
     <p>
       <strong>We'd love to work with you on turning your most bold idea or complex problem
       into a public success story.</strong> Please describe what you're looking
-      to do, and we'll follow-up in one business day. If you prefer, you can email
+      to do, and we'll follow up in one business day. If you prefer, you can email
       us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
     </p>
   </div>
