update interview copy

--- a/pages/join.html
+++ b/pages/join.html
@@ -185,19 +185,17 @@ permalink: /join/
         </p>
 
         <p>
-          If the preliminary screening call goes well, we'll schedule you for a technical
+          If the preliminary screening call goes well, we'll schedule you for a skills
           interview and a behavioral interview, which are typically held back to back on Fridays.
           Both interviews are generally held by phone or video.
         </p>
 
-        <h2>Technical interview</h2>
+        <h2>Skills interview</h2>
 
         <p>
-          The technical interview lasts approximately one and a half hours.
+          The skills interview lasts approximately one and a half hours.
           You'll be asked a variety of questions about your experience and skills,
-          and how you'd apply them within the context of Skylight's work. This segment
-          of the interview process typically includes a problem-solving (or challenge)
-          exercise related to the role to which you're applying.
+          and how you'd apply them within the context of Skylight's work.
         </p>
 
         <h2>Behavioral interview</h2>
