--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -9,12 +9,12 @@ feature_image:
 feature_image_description:
 order: 5
 display: true
-tags: [digital services delivery, becca bartola, tom black, lesley evans, aera hoffman]
+tags: [digital services delivery, becca bartola, lesley evans, tom black, aera hoffman]
 excerpt: A knowledge management platform for improving how the Veterans Affairs delivers healthcare to Veterans through the dissemination of promising clinical and administrative practices.
 project_members:
   - becca-bartola
-  - tom-black
   - lesley-evans
+  - tom-black
   - aera-hoffman
 technologies:
   - Ruby / Rails
