fix broken links

--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -26,7 +26,7 @@ practices:
   - Iterative and incremental development
 news_posts:
   - title: 18F Launches RFP Ghostwriting and Review Service
-    url: http://www.govtech.com/federal/18F-Launches-RFP-Ghostwriting-and-Review-Service.html
+    url: https://www.govtech.com/pcio/articles/18F-Launches-RFP-Ghostwriting-and-Review-Service.html
   - title: DoD 'Force of the Future' includes civilian Digital Service team
     url: http://www.federaltimes.com/story/government/it/management/2015/09/08/force--future-digital-service/71890924/
   - title: A New Approach to Procuring Government Technology in California
@@ -36,7 +36,7 @@ news_posts:
   - title: 18F expands efforts to state and local governments
     url: https://www.fedscoop.com/18f-expands-efforts-to-state-and-local-governments/
   - title: Feds Extend 18F's Silicon Valley Expertise to Cities, States
-    url: http://www.govtech.com/federal/feds-extend-18fs-silicon-valley-expertise-to-cities-states.html
+    url: https://www.govtech.com/news/Feds-Extend-18Fs-Silicon-Valley-Expertise-to-Cities-States.html
 project_url:
 project_cta:
 source_code_url:
