Adds subnav to mobile

--- a/pages/training.html
+++ b/pages/training.html
@@ -17,7 +17,7 @@ permalink: /training/
 <div>
     <div class="inner-container">
         <div class="row">
-            <div class="col-3">
+            <div class="jumpnav">
                 <aside class="subnav-col">
                     <nav id="subnav">
                         <ul class="nav flex-column">
@@ -38,9 +38,10 @@ permalink: /training/
                             </li>
                         </ul>
                     </nav>
+                    <button class="subnav-button btn btn-primary">Jump to...</button>
                 </aside>
             </div>
-            <div class="col-9">
+            <div class="jumpnav-content">
                 <h2 id="background" class="header-display-3 mb-2">Background</h2>
                 <p>The term digital services refers to the delivery of services to customers in the internet era. Great digitals services are built by teams who make effective use of practices and technologies in areas such as user-centered design, agile software delivery, and cloud computing. From an acquisition standpoint, these solutions represent a fundamental change to the way you and your agency needs to approach procurement. We call this new and modern approach to procurement digital acquisition.</p>
                 <p>To increase the development of digital acquisition experts across the government, the U.S. Digital Service and the Office of Federal Procurement Policy launched the Digital IT Acquisition Professional (DITAP) Training program. Skylight offers DITAP training, led by experts who pioneered the field as former members of 18F and the U.S. Digital Service. </p>
