--- a/pages/training.html
+++ b/pages/training.html
@@ -9,7 +9,7 @@ permalink: /training/
         <h1 class="text-white mb-4 header-display-2">Digital IT Acquisition Professional (DITAP) Training</h1>
         <p class="text-white mb-4">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you’ll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services (FAC-C-DS) and up to 80 Continuous Learning Points.</p>
         <div>
-            <a href="#" role="button" class="btn btn-yellow mr-3 btn-md-block">Apply Now <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+            <a href="mailto:chris@skylight.digital" role="button" class="btn btn-yellow mr-3 btn-md-block">Apply Now <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
             <a href="#" role="button" class="btn btn-outline-white mr-3 btn-md-block">Download syllabus</a>
         </div>
     </div>
@@ -45,7 +45,7 @@ permalink: /training/
                 <h2 id="background" class="header-display-3 mb-2">Background</h2>
                 <p>The term digital services refers to the delivery of services to customers in the internet era. Great digitals services are built by teams who make effective use of practices and technologies in areas such as user-centered design, agile software delivery, and cloud computing. From an acquisition standpoint, these solutions represent a fundamental change to the way you and your agency needs to approach procurement. We call this new and modern approach to procurement digital acquisition.</p>
                 <p>To increase the development of digital acquisition experts across the government, the U.S. Digital Service and the Office of Federal Procurement Policy launched the Digital IT Acquisition Professional (DITAP) Training program. Skylight offers DITAP training, led by experts who pioneered the field as former members of 18F and the U.S. Digital Service. </p>
-                <h2 id="what" class="header-display-3 mb-2 mt-3 pt-2">What you'll learn</h2>
+                <h2 id="what" class="header-display-3 mb-2 mt-5 pt-2">What you'll learn</h2>
                 <p>In this program, you’ll learn how to translate critical concepts and resources in the field of digital acquisition into effective, real-world practice.</p>
                 <p><strong>Digital Services in the 21st Century Government</strong><br />Learn the fundamentals of digital services, including human-centered design, agile software delivery, cloud computing, and X-as-a-service.</p>
                 <p><strong>Understanding What You’re Buying</strong><br />Learn how to determine what your customer’s needs are, how to assess which solutions are most likely to succeed given your agency’s current level of maturity, and how to conduct market research.</p>
@@ -59,7 +59,7 @@ permalink: /training/
                         <div class="header-display-5">Former Centers for Medicare & Medicaid Services Digital Service Contracting Advisor and Lead Contracting Officer for the Quality Payment Program</div>
                     </blockquote>
                 </div>
-                <h2 id="who" class="header-display-3 mb-2 mt-3 pt-2">Who should take DITAP training</h2>
+                <h2 id="who" class="header-display-3 mb-2 mt-5 pt-2">Who should take DITAP training</h2>
                 <p>By 2022, all federal acquisition professionals managing contracts of $7M or more will require FAC-C-DS certification, which can be obtained by completing an accredited DITAP training course such as ours. DITAP training isn’t just for acquisition professionals seeking certification. </p>
                 <p>This training is for anyone who plays a role in the lifecycle of an acquisition, and wants to learn how to transform acquisition outcomes through digital acquisition methods. We’ve seen these roles in particular have great impact with acquisition training:</p>
                 <ul>
@@ -69,12 +69,12 @@ permalink: /training/
                     <li>Technical Managers</li>
                     <li>Procurement Officers</li>
                 </ul>
-                <h2 id="how" class="header-display-3 mb-2 mt-3 pt-2">How it works</h2>
+                <h2 id="how" class="header-display-3 mb-2 mt-5 pt-2">How it works</h2>
                 <p><strong>We believe that learning, like acquisitions in government, should be collaborative and hands-on.</strong> We’ve designed our learning environment to coach you through real-world problems, and to create an immersive experience in both the theory and applied practice of digital acquisitions.</p>
                 <p><strong>We bring modern practices to you.</strong> Our team of educators, coaches, and acquisition professionals are eager to share our experiences as we live them every day. Through our blend of remote and onsite learning, you’ll have the chance to engage with the pioneers of modern digital acquisitions.</p>
                 <p><strong>Learn in a dynamic environment.</strong> We combine traditional in-person classroom learning (full of activities, seminars, panels, and guest speakers) with flexible, asynchronous online learning content. Your time will be split between reading case studies and participating in team projects, with plenty of interactive discussion and collaboration. Our balanced and holistic approach will give you the tools to succeed, whatever your learning style.</p>
                 <p><strong>Receive a hands-on education.</strong> Our skilled facilitators will help mentor you every step of the way through collaboration webinars, feedback and discussion sessions, and even helping coach project teams.</p>
-                <h2 id="specifics" class="header-display-3 mb-2 mt-3 pt-2">Nuts &amp; Bolts</h2>
+                <h2 id="specifics" class="header-display-3 mb-2 mt-5 pt-2">Nuts &amp; Bolts</h2>
                 <p><strong>Logistically speaking, the course is set up with a combination of in-person and remote involvement.</strong></p>
                 <p>You’ll spend </p>
                 <ul>
@@ -94,45 +94,32 @@ permalink: /training/
                 <p><strong>To enroll, we suggest you already have a Level II or Level III FAC-C certification, though it is not required</strong> as long as you have the requisite acquisition skills and knowledge to complete the program.</p>
                 <p><strong>Your peers will be fellow acquisition professionals who are as passionate about changing procurement outcomes as you are.</strong> These colleagues will be valuable (to us and to you) as future collaborators and friends.</p>
                 <div><strong>Each course requires a minimum of 25 participants.</strong> The run dates are contingent upon meeting this minimum, and we will communicate with applicants accordingly.</div>
-                <h2 id="upcoming" class="header-display-3 mb-2 mt-3 pt-2">Upcoming Courses</h2>
-                {% for training in site.training_offerings %}
-                    <a href="{{training.permalink}}">
-                        <div class="">{{training.start_date}} - {{training.end_date}}</div>
-                        <div class="">{{training.location}}</div>
-                        <div class="">Instructors:</div>
-                        <div>
-                            {% for member in training.instructors %}
-                                {% assign emp = site.data.team | where: 'name', member | first %}
-                                {{emp.full_name}}{% if forloop.last != true %}, {% endif %}
-                            {% endfor %}
-                        </div>
-                        <div class="">Cost: {{training.cost}}</div>
-                        <div class="">Apply to this course -></div>
-                    </a>
-                {% endfor %}
+                <h2 id="upcoming" class="header-display-3 mb-2 mt-5 pt-2">Upcoming Courses</h2>
+                <div class="courses">
+                    {% for training in site.training_offerings %}
+                        <a href="{{training.permalink}}" class='course-card'>
+                            <div role="img" class="course-img" style="background-image: url({{training.image}});" title="Illustration of Hurricane Maria engulfing Puerto Rico."></div>
+                            <div class="course-preview p-4">
+                                <div class="font-weight-bold mb-3">{{training.start_date}} - {{training.end_date}}</div>
+                                <div class="font-weight-bold">{{training.location}}</div>
+                                <div class="text-gray-dark">
+                                    <strong>Instructors:</strong>
+                                    {% for member in training.instructors %}
+                                        {% assign emp = site.data.team | where: 'name', member | first %}
+                                        {{emp.full_name}}{% if forloop.last != true %}, {% endif %}
+                                    {% endfor %}
+                                </div>
+                                <div class="text-gray-dark mb-3"><strong>Cost:</strong> {{training.cost}}</div>
+                                <div class="">Apply to this course →</div>
+                            </div>
+                        </a>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
 </div>
-<footer class="page-subfooter scroll-bottom-offset">
-    <div class="page-subfooter-content">
-        <div class="page-subfooter-header-row">
-            <div class="page-subfooter-header-col">
-                <h3 class="header-display-2">Still have questions?</h3>
-            </div>
-        </div>
-        <div class="page-subfooter-text-row">
-            <div class="page-subfooter-text-col">
-                <p>Please don’t hesitate to get in touch with us</p>
-            </div>
-        </div>
-        <div class="page-subfooter-cta-row">
-            <div class="page-subfooter-cta-col">
-                <a href="mailto:chris@skylight.digital" role="button">
-                    <span>Email us</span>
-                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                </a>
-            </div>
-        </div>
-    </div>
-</footer>
+{% include training_cta.html
+    header = "Still have questions?"
+    text = "Please don’t hesitate to get in touch with us"
+%}
