Adds fixed nav to join page

--- a/pages/training.html
+++ b/pages/training.html
@@ -20,7 +20,7 @@ permalink: /training/
             <div class="jumpnav">
                 <aside class="subnav-col">
                     <nav id="subnav">
-                        <ul class="nav flex-column">
+                        <ul class="nav flex-column" role="presentation">
                             <li class="nav-item">
                                 <a href="#background" class="nav-link active"><span>Background</span></a>
                             </li>
