--- a/pages/join.html
+++ b/pages/join.html
@@ -4,7 +4,7 @@ title: Join Us
 permalink: /join/
 ---
 
-<header class="page-header-1">
+<header class="page-header-1 scroll-top-offset">
   <div class="row">
     <div class="page-header-title-1">
       <h1>Join Us</h1>
@@ -18,13 +18,37 @@ permalink: /join/
 </header>
 
 <div class="join-us">
-
   <div class="row">
-
-    <section class="join-content-col">
+    <div class="jumpnav">
+      <aside class="subnav-col">
+        <nav id="subnav">
+          <ul class="nav flex-column" role="presentation">
+            <li class="nav-item">
+              <a href="#join" class="nav-link"><span>Join the team</span></a>
+            </li>
+            <li class="nav-item">
+              <a href="#who" class="nav-link"><span>Who we're hiring</span></a>
+            </li>
+            <li class="nav-item">
+              <a href="#interviewing" class="nav-link"><span>Interview process</span></a>
+            </li>
+            <li class="nav-item">
+              <a href="#benefits" class="nav-link"><span>Pay &amp; benefits</span></a>
+            </li>
+            <li class="nav-item">
+              <a href="#relocation" class="nav-link"><span>Relocation</span></a>
+            </li>
+            <li class="nav-item">
+              <a href="#internships" class="nav-link"><span>Internships</span></a>
+            </li>
+          </ul>
+        </nav>
+        <button class="subnav-button btn btn-primary">Jump to...</button>
+      </aside>
+    </div>
+    <section class="jumpnav-content">
       <div id="join">
-        <h2>Join the team</h2>
-
+        <h2 class="header-display-3 mb-2">Join the team</h2>
         <p>
           We're looking for great people in the fields of design, engineering, data science,
           product management, and more to join us in a movement to make government
@@ -38,7 +62,7 @@ permalink: /join/
       </div>
 
       <div id="who">
-        <h2>Who we're hiring</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Who we're hiring</h2>
 
         <p>
           Skylight is seeking designers, engineers, product managers, procurement experts,
@@ -48,7 +72,7 @@ permalink: /join/
           and schools of life.
         </p>
 
-        <h2>Skill sets we're looking for</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Skill sets we're looking for</h2>
 
         <p>
           We're looking for candidates with the hands-on skills, leadership ability,
@@ -85,7 +109,7 @@ permalink: /join/
           that we seek. Don't see what you do on this list? <a href="/join/#application">Apply anyway</a>!
         </p>
 
-        <h2>Who is eligible to work with us</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Who is eligible to work with us</h2>
 
         <p>
           There are a few basic requirements to work at Skylight:
@@ -122,7 +146,7 @@ permalink: /join/
           </li>
         </ul>
 
-        <h2 id="who-where">Where we're hiring</h2>
+        <h2 id="who-where" class="header-display-3 mb-2 mt-5">Where we're hiring</h2>
 
         <p>
           <a href="/about/#hubzone">We're a certified HUBZone company</a>, which requires <strong>35% of
@@ -147,7 +171,7 @@ permalink: /join/
           we may ask you to work at a particular location based on your role.
         </p>
 
-        <h2>Equal opportunity employer</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Equal opportunity employer</h2>
 
         <p>
           We're an Equal Opportunity/Affirmative Action Employer. All qualified applicants will
@@ -159,13 +183,13 @@ permalink: /join/
       </div>
 
       <div id="interviewing">
-        <h2>Interview process</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Interview process</h2>
 
         <p>
           The entire interview process usually takes 1&ndash;2 weeks, followed by 1&ndash;2 weeks for onboarding.
         </p>
 
-        <h2>Application review</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Application review</h2>
 
         <p>
           Within five days after you submit your application,
@@ -174,7 +198,7 @@ permalink: /join/
           If you look like a potential match, we'll begin the live interview process.
         </p>
 
-        <h2>Preliminary screening</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Preliminary screening</h2>
 
         <p>
           The interview process begins with a 30-minute preliminary screening
@@ -190,7 +214,7 @@ permalink: /join/
           Both interviews are generally held by phone or video.
         </p>
 
-        <h2>Skills interview</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Skills interview</h2>
 
         <p>
           The skills interview lasts approximately one and a half hours.
@@ -198,21 +222,21 @@ permalink: /join/
           and how you'd apply them within the context of Skylight's work.
         </p>
 
-        <h2>Behavioral interview</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Behavioral interview</h2>
 
         <p>
           The behavioral interview lasts approximately one hour, and will assess
           how you interact with colleagues and get work done.
         </p>
 
-        <h2>Additional interviews (if needed)</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Additional interviews (if needed)</h2>
 
         <p>
           In some cases, we'll conduct additional interviews to evaluate
           skills we want to know more about.
         </p>
 
-        <h2>The offer and onboarding process</h2>
+        <h2 class="header-display-3 mb-2 mt-5">The offer and onboarding process</h2>
 
         <p>
           If all the interviews go well, you'll receive a conditional offer
@@ -245,7 +269,7 @@ permalink: /join/
           </li>
         </ol>
 
-        <h2>Security clearances</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Security clearances</h2>
 
         <p>
           Many of our "contracting" positions with government require some kind of
@@ -264,7 +288,7 @@ permalink: /join/
       </div>
 
       <div id="benefits">
-        <h2>Pay &amp; benefits</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Pay &amp; benefits</h2>
 
         <p>
           We hire good people and support them with the best benefits possible,
@@ -328,7 +352,7 @@ permalink: /join/
       </div>
 
       <div id="relocation">
-        <h2>Relocation</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Relocation</h2>
 
         <p>
           We offer relocation assistance on a case-by-case basis. We give strong
@@ -342,7 +366,7 @@ permalink: /join/
       </div>
 
       <div id="internships">
-        <h2>Internships</h2>
+        <h2 class="header-display-3 mb-2 mt-5">Internships</h2>
 
         <p>
           Our <i>Emerging CivicTech Stars</i> internship program offers paid opportunities
@@ -407,20 +431,6 @@ permalink: /join/
         </p>
       </div>
     </section>
-
-    <aside class="subnav-col">
-      <nav>
-        <ul role="presentation">
-          <li class="current"><a href="/join/#join" aria-current="location">Join the team</a></li>
-          <li><a href="/join/#who">Who we're hiring</a></li>
-          <li><a href="/join/#interviewing">Interview process</a></li>
-          <li><a href="/join/#benefits">Pay &amp; benefits</a></li>
-          <li><a href="/join/#relocation">Relocation</a></li>
-          <li><a href="/join/#internships">Internships</a></li>
-        </ul>
-      </nav>
-    </aside>
-
   </div>
 
 </div>
