Clean up jump nav

--- a/pages/join.html
+++ b/pages/join.html
@@ -21,11 +21,9 @@ permalink: /join/
   <div class="row">
     <div class="jumpnav">
       <aside class="subnav-col">
+        <button class="subnav-button btn">Jump to...</button>
         <nav id="subnav">
           <ul class="nav flex-column" role="presentation">
-            <li class="nav-item">
-              <a href="#join" class="nav-link"><span>Join the team</span></a>
-            </li>
             <li class="nav-item">
               <a href="#who" class="nav-link"><span>Who we're hiring</span></a>
             </li>
@@ -43,12 +41,10 @@ permalink: /join/
             </li>
           </ul>
         </nav>
-        <button class="subnav-button btn btn-primary">Jump to...</button>
       </aside>
     </div>
     <section class="jumpnav-content">
       <div id="join">
-        <h2 class="header-display-3 mb-2">Join the team</h2>
         <p>
           We're looking for great people in the fields of design, engineering, data science,
           product management, and more to join us in a movement to make government
@@ -61,8 +57,10 @@ permalink: /join/
         {% include open_positions.html %}
       </div>
 
+      <hr class="section-break" />
+
       <div id="who">
-        <h2 class="header-display-3 mb-2 mt-5">Who we're hiring</h2>
+        <h2 class="header-display-2 mb-3 mt-5">Who we're hiring</h2>
 
         <p>
           Skylight is seeking designers, engineers, product managers, procurement experts,
@@ -72,7 +70,7 @@ permalink: /join/
           and schools of life.
         </p>
 
-        <h2 class="header-display-3 mb-2 mt-5">Skill sets we're looking for</h2>
+        <h3 class="header-display-3 mb-2 mt-5">Skill sets we're looking for</h3>
 
         <p>
           We're looking for candidates with the hands-on skills, leadership ability,
@@ -109,7 +107,7 @@ permalink: /join/
           that we seek. Don't see what you do on this list? <a href="/join/#application">Apply anyway</a>!
         </p>
 
-        <h2 class="header-display-3 mb-2 mt-5">Who is eligible to work with us</h2>
+        <h3 class="header-display-3 mb-2 mt-5">Who is eligible to work with us</h3>
 
         <p>
           There are a few basic requirements to work at Skylight:
@@ -146,7 +144,7 @@ permalink: /join/
           </li>
         </ul>
 
-        <h2 id="who-where" class="header-display-3 mb-2 mt-5">Where we're hiring</h2>
+        <h3 id="who-where" class="header-display-3 mb-2 mt-5">Where we're hiring</h3>
 
         <p>
           <a href="/about/#hubzone">We're a certified HUBZone company</a>, which requires <strong>35% of
@@ -171,7 +169,7 @@ permalink: /join/
           we may ask you to work at a particular location based on your role.
         </p>
 
-        <h2 class="header-display-3 mb-2 mt-5">Equal opportunity employer</h2>
+        <h3 class="header-display-3 mb-2 mt-5">Equal opportunity employer</h3>
 
         <p>
           We're an Equal Opportunity/Affirmative Action Employer. All qualified applicants will
@@ -182,8 +180,10 @@ permalink: /join/
         </p>
       </div>
 
+      <hr class="section-break" />
+
       <div id="interviewing">
-        <h2 class="header-display-3 mb-2 mt-5">Interview process</h2>
+        <h2 class="header-display-2 mb-3 mt-5">Interview process</h2>
 
         <p>
           The entire interview process usually takes 1&ndash;2 weeks, followed by 1&ndash;2 weeks for onboarding.
@@ -287,8 +287,10 @@ permalink: /join/
         </p>
       </div>
 
+      <hr class="section-break" />
+
       <div id="benefits">
-        <h2 class="header-display-3 mb-2 mt-5">Pay &amp; benefits</h2>
+        <h2 class="header-display-2 mb-3 mt-5">Pay &amp; benefits</h2>
 
         <p>
           We hire good people and support them with the best benefits possible,
@@ -351,8 +353,10 @@ permalink: /join/
         </ul>
       </div>
 
+      <hr class="section-break" />
+
       <div id="relocation">
-        <h2 class="header-display-3 mb-2 mt-5">Relocation</h2>
+        <h2 class="header-display-2 mb-3 mt-5">Relocation</h2>
 
         <p>
           We offer relocation assistance on a case-by-case basis. We give strong
@@ -365,8 +369,10 @@ permalink: /join/
         </p>
       </div>
 
+      <hr class="section-break" />
+
       <div id="internships">
-        <h2 class="header-display-3 mb-2 mt-5">Internships</h2>
+        <h2 class="header-display-2 mb-3 mt-5">Internships</h2>
 
         <p>
           Our <i>Emerging CivicTech Stars</i> internship program offers paid opportunities
