--- a/pages/training.html
+++ b/pages/training.html
@@ -19,6 +19,7 @@ permalink: /training/
         <div class="row">
             <div class="jumpnav">
                 <aside class="subnav-col">
+                    <button class="subnav-button btn">Jump to...</button>
                     <nav id="subnav">
                         <ul class="nav flex-column" role="presentation">
                             <li class="nav-item">
@@ -38,7 +39,6 @@ permalink: /training/
                             </li>
                         </ul>
                     </nav>
-                    <button class="subnav-button btn btn-primary">Jump to...</button>
                 </aside>
             </div>
             <div class="jumpnav-content">
