Fix jumpnav issue where overlap on mobile

--- a/pages/join.html
+++ b/pages/join.html
@@ -57,9 +57,9 @@ permalink: /join/
         {% include open_positions.html %}
       </div>
 
-      <hr class="section-break" />
+      <hr id="who" class="section-break" />
 
-      <div id="who">
+      <div>
         <h2 class="header-display-2 mb-3 mt-5">Who we're hiring</h2>
 
         <p>
@@ -180,9 +180,9 @@ permalink: /join/
         </p>
       </div>
 
-      <hr class="section-break" />
+      <hr id="interviewing" class="section-break" />
 
-      <div id="interviewing">
+      <div>
         <h2 class="header-display-2 mb-3 mt-5">Interview process</h2>
 
         <p>
@@ -287,9 +287,9 @@ permalink: /join/
         </p>
       </div>
 
-      <hr class="section-break" />
+      <hr id="benefits" class="section-break" />
 
-      <div id="benefits">
+      <div>
         <h2 class="header-display-2 mb-3 mt-5">Pay &amp; benefits</h2>
 
         <p>
@@ -353,9 +353,9 @@ permalink: /join/
         </ul>
       </div>
 
-      <hr class="section-break" />
+      <hr id="relocation" class="section-break" />
 
-      <div id="relocation">
+      <div>
         <h2 class="header-display-2 mb-3 mt-5">Relocation</h2>
 
         <p>
@@ -369,9 +369,9 @@ permalink: /join/
         </p>
       </div>
 
-      <hr class="section-break" />
+      <hr id="internships" class="section-break" />
 
-      <div id="internships">
+      <div>
         <h2 class="header-display-2 mb-3 mt-5">Internships</h2>
 
         <p>
