Add arrow to mobile jumpnav

--- a/pages/join.html
+++ b/pages/join.html
@@ -21,7 +21,10 @@ permalink: /join/
   <div class="row">
     <div class="jumpnav">
       <aside class="subnav-col">
-        <button class="subnav-button btn">Jump to...</button>
+        <button class="subnav-button btn">
+          <span>Jump to...</span>
+          <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </button>
         <nav id="subnav">
           <ul class="nav flex-column" role="presentation">
             <li class="nav-item">
