--- a/pages/services.html
+++ b/pages/services.html
@@ -130,6 +130,7 @@ permalink: /services/
         <p><abbr title="Administrative Management and General Management Consulting">541611</abbr></p>
         <p><abbr title="Custom Computer Programming Services">541511</abbr></p>
         <p><abbr title="Other Computer Related Services">541519</abbr></p>
+        <p><abbr title="Professional and Management Development Training">611430</abbr></p>
       </div>
     </div>
   </section>
