--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -47,7 +47,7 @@ source_code_url:
   <p>
     The Veterans Affairs (VA) needs a way to systematically identify and spread the
     adoption of proven clinical and administrative practices across its healthcare
-    delivery network. We were brought into to build a knowledge management platform
+    delivery network. We were brought in to build a knowledge management platform
     in order to achieve this important goal.
   </p>
 {% endcapture %}
