update join page

--- a/pages/join.html
+++ b/pages/join.html
@@ -309,20 +309,22 @@ permalink: /join/
           </li>
 
           <li>
+            Incentives for living in a HUBZone area, including relocation assistance
+            and a monthly stipend to help offset the cost of rent or mortgage
+          </li>
+
+          <li>
+            Remote-friendly work environment
+          </li>
+
+          <li>
             Time to focus on activities such as learning &amp; development,
             open-source projects, and community outreach
           </li>
 
           <li>
-            An environment that empowers you to unleash your superpowers for public good
-          </li>
-
-          <li>
-            Potential relocation assistance
-          </li>
-
-          <li>
-            Remote-friendly work environment
+            An environment that empowers you to unleash your superpowers for
+            public good
           </li>
         </ul>
       </div>
