--- a/pages/join.html
+++ b/pages/join.html
@@ -314,6 +314,10 @@ permalink: /join/
           </li>
 
           <li>
+            Access up to $1,000 before payday to cover emergency expenses
+          </li>
+
+          <li>
             Remote-friendly work environment
           </li>
 
