Update landing button and style updates

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ title: Home
         <br> and procurement to enable government success in the digital age.
       </p>
 
-      <a href="/hire-us/" role="button">
-        <span>Let's talk</span>
+      <a class="btn btn-warning btn-lg text-dark" href="/hire-us/" role="button">
+        <span class="font-bold">Let's talk</span>
         <i class="fa fa-arrow-right" aria-hidden="true"></i>
       </a>
     </div>
